--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "sdk"
   ],
   "type": "library",
-  "homepage": "https://github.com/VKCOM/vk-php-sdk",
+  "homepage": "https://github.com/qwerdev-a/vk-php-sdk",
   "license": "MIT",
   "require": {
     "php": "^8.1",
